@@ -60,12 +60,9 @@ public class SentryClient {
      */
     protected Map<String, String> tags = new HashMap<>();
     /**
-     * Extras to extract and use as tags, where applicable.
-     * <p>
-     * For example: when using a logging integration any {@link org.slf4j.MDC} keys that are in
-     * the {@link #extraTags} set will be extracted and set as tags on the {@link Event}.
+     * Tags to extract from the MDC system and set on {@link io.sentry.event.Event}s, where applicable.
      */
-    protected Set<String> extraTags = new HashSet<>();
+    protected Set<String> mdcTags = new HashSet<>();
     /**
      * Extra data to be sent to sentry.
      * <p>
@@ -267,8 +264,8 @@ public class SentryClient {
         return Collections.unmodifiableMap(tags);
     }
 
-    public Set<String> getExtraTags() {
-        return Collections.unmodifiableSet(extraTags);
+    public Set<String> getMdcTags() {
+        return Collections.unmodifiableSet(mdcTags);
     }
 
     public Map<String, Object> getExtra() {
@@ -315,31 +312,47 @@ public class SentryClient {
     }
 
     /**
-     * Add an extra to extract and send as tags on all future {@link Event}s, where applicable.
-     * <p>
-     * For example: when using a logging integration any {@link org.slf4j.MDC} keys that are in
-     * the {@link #extraTags} set will be extracted and set as tags on the {@link Event}.
+     * Set the tags to extract from the MDC system and set on {@link io.sentry.event.Event}s, where applicable.
      *
-     * @param extraName Extra name
+     * @param extraTags Set of tags to extract from the MDC system
+     * @deprecated prefer {@link SentryClient#setMdcTags(Set)}
      */
-    public void addExtraTag(String extraName) {
-        this.extraTags.add(extraName);
+    @Deprecated
+    public void setExtraTags(Set<String> extraTags) {
+        setMdcTags(extraTags);
     }
 
     /**
-     * Set the extras to extract and send as tags on all future {@link Event}s, where applicable.
-     * <p>
-     * For example: when using a logging integration any {@link org.slf4j.MDC} keys that are in
-     * the {@link #extraTags} set will be extracted and set as tags on the {@link Event}.
+     * Set the tags to extract from the MDC system and set on {@link io.sentry.event.Event}s, where applicable.
      *
-     * @param extraTags Set of extras
+     * @param mdcTags Set of tags to extract from the MDC system
      */
-    public void setExtraTags(Set<String> extraTags) {
-        if (extraTags == null) {
-            this.extraTags = new HashSet<>();
+    public void setMdcTags(Set<String> mdcTags) {
+        if (mdcTags == null) {
+            this.mdcTags = new HashSet<>();
         } else {
-            this.extraTags = extraTags;
+            this.mdcTags = mdcTags;
         }
+    }
+
+    /**
+     * Add a tag to extract from the MDC system and set on {@link io.sentry.event.Event}s, where applicable.
+     *
+     * @param extraName Tag name to extract from the MDC system
+     * @deprecated prefer {@link SentryClient#addMdcTag(String)}
+     */
+    @Deprecated
+    public void addExtraTag(String extraName) {
+        addMdcTag(extraName);
+    }
+
+    /**
+     * Add a tag to extract from the MDC system and set on {@link io.sentry.event.Event}s, where applicable.
+     *
+     * @param tagName Tag name to extract from the MDC system
+     */
+    public void addMdcTag(String tagName) {
+        this.mdcTags.add(tagName);
     }
 
     /**
@@ -391,7 +404,7 @@ public class SentryClient {
             + ", environment='" + environment + '\''
             + ", serverName='" + serverName + '\''
             + ", tags=" + tags
-            + ", extraTags=" + extraTags
+            + ", mdcTags=" + mdcTags
             + ", extra=" + extra
             + ", connection=" + connection
             + ", builderHelpers=" + builderHelpers
