@@ -6,7 +6,6 @@ import java.util.*;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
 
 public class DefaultSentryClientFactoryTest extends BaseTest {
@@ -38,7 +37,7 @@ public class DefaultSentryClientFactoryTest extends BaseTest {
         Set<String> extraTagsSet = new HashSet<>();
         extraTagsSet.add("aaa");
         extraTagsSet.add("bbb");
-        assertThat(sentryClient.getExtraTags(), is(extraTagsSet));
+        assertThat(sentryClient.getMdcTags(), is(extraTagsSet));
 
         Map<String, Object> extrasMap = new HashMap<>();
         extrasMap.put("red", "blue");
